--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -58,11 +58,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
-    "  # Your code here\n",
+    "  # Convert the words to lowercase and sort them\n",
+    "  word_a_sorted = sorted(word_a.lower())\n",
+    "  word_b_sorted = sorted(word_b.lower())\n",
+    "  # Check if the sorted words are equal\n",
+    "  return word_a_sorted == word_b_sorted\n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\")"
@@ -72,7 +87,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Night\")"
    ]
@@ -81,7 +107,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
    ]
@@ -99,10 +136,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
-    "  # Modify your existing code here\n",
+    "  # Convert the words to lowercase and sort them if is_case_sensitive is False\n",
+    "  # othrerwise sort them as they are\n",
+    "  word_a_sorted = sorted(word_a) if is_case_sensitive else sorted(word_a.lower())\n",
+    "  word_b_sorted = sorted(word_b) if is_case_sensitive else sorted(word_b.lower())\n",
+    "  # Check if the sorted words are equal\n",
+    "  return word_a_sorted == word_b_sorted\n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\", False) # True"
@@ -112,7 +165,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Listen\", True) # False"
    ]
